build: 초기 로컬 개발 환경 세팅

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --coverage --no-cache",
     "coverage": "jest --coverage",
     "prepare": "husky",
-    "lint": "eslint --cache ./src",
+    "eslint": "eslint --cache ./src",
     "format": "prettier --cache --write --log-level warn ./src",
     "commitlint": "commitlint --edit"
   },
