--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "commitlint": "^19.5.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.10.0",
     "husky": "^9.1.6",
